--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "dependencies": {
-    "json-server": "^1.0.0-beta.3"
-  },
+  "name": "project_data",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
