--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "project_data",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
+  },
+  "dependencies": {
+    "json-server": "^0.17.3"
   }
 }
